# vhostmd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  mdisk.xml  metric.dtd  rcvhostmd  vhostmd.changes  vhostmd.dtd  vhostmd.init  vhostmd.service  vhostmd.spec  vhostmd.xml
docs/: Makefile.am
docs/man/: Makefile.am  vhostmd.8  vm-dump-metrics.1
include/: Makefile.am  metric.h  util.h  virtio.h
libmetrics/: Makefile.am  host_metrics.c  libmetrics.c  libmetrics.h  libserialclient.c  libserialclient.h  vm_metrics.c
scripts/: Makefile.am  pagerate.pl  vif-stats.py
test/: .valgrind.supp  Makefile.am  main.c
tools/: exclude  make-bz2  validate.py
vhostmd/: .valgrind.supp  Makefile.am  metric.c  util.c  vhostmd.c  virt-util.c  virtio.c  xen-metrics.c  xenctrl-util.c  xenstore-update.c
vm-dump-metrics/: Makefile.am  main.c
